<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rView"
    android:background="#99A4E3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#000000"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/change_font_size"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#C6A540" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/change_color"
        android:textColor="#FF9100"
        android:textSize="20sp"
        android:textStyle="italic"
        app:backgroundTint="#872323" />

    <Button
        android:id="@+id/button3"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/change_background_color"
        android:textColor="#200353"
        android:textSize="20sp"
        app:backgroundTint="#D85D36" />

    <Button
        android:id="@+id/button4"
        android:layout_width="46dp"
        android:layout_height="19dp"
        android:layout_margin="25dp"

        android:text="@string/exit"
        android:textColor="@color/black"
        app:backgroundTint = "#FF0000"
        app:iconTintMode="src_over"
        app:iconTint = "#FF0000"/>
</LinearLayout>
