<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8261BD"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#000000"
        android:fontFamily="casual"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/increase"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#E91E63" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="#000000"
        android:fontFamily="casual"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/decrease"
        android:textColor="#1C140A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#E3574C" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:gravity="center_horizontal|center_vertical"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/back2"
        android:textSize="16sp"
        app:backgroundTint="#D34848"
        app:elevation="0dp" />

</LinearLayout>
